--- a/src/config/_mixins.scss
+++ b/src/config/_mixins.scss
@@ -1,23 +1,32 @@
 @mixin breakpoint($point) {
-    @if $point == desktop {
-      @media (min-width: 70em) {
-        @content;
-      }
-    } @else if $point == laptop {
-      @media (min-width: 64em) {
-        @content;
-      }
-    } @else if $point == tablet {
-      @media (min-width: 50em) {
-        @content;
-      }
-    } @else if $point == phablet {
-      @media (min-width: 37.5em) {
-        @content;
-      }
-    } @else if $point == mobileonly {
-      @media (max-width: 37.5em) {
-        @content;
-      }
+  @if $point == desktop {
+    @media (min-width: 70em) {
+      @content;
     }
-  } 
+  } @else if $point == laptop {
+    @media (min-width: 64em) {
+      @content;
+    }
+  } @else if $point == tablet {
+    @media (min-width: 50em) {
+      @content;
+    }
+  } @else if $point == phablet {
+    @media (min-width: 37.5em) {
+      @content;
+    }
+  } @else if $point == mobileonly {
+    @media (max-width: 37.5em) {
+      @content;
+    }
+  }
+}
+
+
+@mixin boxBorder($radius) {
+  border: 1px solid #e6e6e6;
+  background-color: white;
+  @if $radius == yes {
+    border-radius: 5px;
+  }
+}
