--- a/src/components/Auth/styles.module.scss
+++ b/src/components/Auth/styles.module.scss
@@ -35,14 +35,17 @@
             @include boxBorder(no);
             padding: 15px;
             text-align: center;
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
             .changeLink {
                 margin-left: 15px;
                 color: $light-blue;
                 cursor: pointer;
             }
-        }   
+        }
+        .formBox {
+            margin-bottom: 10px;
+            img {
+                height: 60px;
+            }
+        }
     }
 }
