#3-27 Complete Auth Components

--- a/src/components/Auth/styles.module.scss
+++ b/src/components/Auth/styles.module.scss
@@ -10,7 +10,7 @@
     .column {
         width: 40%;
         &:last-child {
-            width: 35%;
+            width: 38%;
             margin-left: 35px;
         }
         .appBox {
@@ -43,6 +43,8 @@
         }
         .formBox {
             margin-bottom: 10px;
+            padding: 0 40px;
+            padding-top: 30px;
             img {
                 height: 60px;
             }
