--- a/src/config/_mixins.scss
+++ b/src/config/_mixins.scss
@@ -30,3 +30,25 @@
     border-radius: 5px;
   }
 }
+
+@mixin blueButton() {
+  -webkit-appearance: none;
+  border-radius: 3px;
+  background-color: $light-blue;
+  color: white;
+  font-weight: 600;
+  font-size: $normal-font-size;
+  border: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  line-height: 26px;
+  cursor: pointer;
+  &:focus,
+  &:active {
+    outline: none;
+  }
+  &:active {
+    opacity: 0.7;
+  }
+}
