--- a/src/components/Auth/styles.module.scss
+++ b/src/components/Auth/styles.module.scss
@@ -1,53 +1,79 @@
 .auth {
-    max-width: $max-page-width;
-    width: 100%;
-    min-height: 100%;
-    margin: 0 auto;
-    margin-top: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    .column {
-        width: 40%;
-        &:last-child {
-            width: 38%;
-            margin-left: 35px;
-        }
-        .appBox {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            margin-top: 35px;
-            
-            .appStore {
-                display: flex;
-                justify-content: space-between;
-                margin-top: 25px;
-                img {
-                    height: 40px;
-                    &:first-child {
-                        margin-right: 10px;
-                    }
-                }
-            }
-        }   
-        .whiteBox {
-            @include boxBorder(no);
-            padding: 15px;
-            text-align: center;
-            .changeLink {
-                margin-left: 15px;
-                color: $light-blue;
-                cursor: pointer;
-            }
-        }
-        .formBox {
-            margin-bottom: 10px;
-            padding: 0 40px;
-            padding-top: 30px;
-            img {
-                height: 60px;
-            }
-        }
+  max-width: $max-page-width;
+  width: 100%;
+  min-height: 100%;
+  margin: 0 auto;
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  @include breakpoint("phone") {
+    margin-top: 10px;
+  }
+  .column {
+    width: 40%;
+    @include breakpoint("phone") {
+      &:first-child {
+        display: none;
+      }
     }
+    @include breakpoint("tablet") {
+      &:first-child {
+        display: none;
+      }
+    }
+    &:last-child {
+      width: 38%;
+      margin-left: 35px;
+      @include breakpoint("phone") {
+        width: 100%;
+        margin: 0;
+      }
+      @include breakpoint("tablet") {
+        width: $tablet-width;
+        max-width: 350px;
+        margin: 0;
+      }
+    }
+    .appBox {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-top: 35px;
+
+      .appStore {
+        display: flex;
+        justify-content: space-between;
+        margin-top: 25px;
+        img {
+          height: 40px;
+          &:first-child {
+            margin-right: 10px;
+          }
+        }
+      }
+    }
+    .whiteBox {
+      @include boxBorder(no);
+      @include breakpoint("phone") {
+        background-color: transparent;
+        border: 0;
+      }
+      padding: 15px;
+      text-align: center;
+      .changeLink {
+        margin-left: 15px;
+        color: $light-blue;
+        cursor: pointer;
+      }
+    }
+    .formBox {
+      margin-bottom: 10px;
+      padding: 0 40px;
+      padding-top: 30px;
+      img {
+        height: 60px;
+      }
+    }
+  }
 }
