--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -10,19 +10,19 @@
   font-size: $small-font-size;
   margin-bottom: 55px;
   flex-wrap: wrap;
-  @include breakpoint(mobileonly) {
+  @include breakpoint("phone-tablet") {
     justify-content: center;
   }
   .column {
     margin-bottom: 15px;
-    @include breakpoint(mobileonly) {
+    @include breakpoint("phone-tablet") {
       margin-bottom: 0;
     }
     .nav {
       .list {
         display: flex;
         flex-wrap: wrap;
-        @include breakpoint(mobileonly) {
+        @include breakpoint("phone-tablet") {
           justify-content: center;
         }
         .listItem {
@@ -30,8 +30,9 @@
           margin-right: 15px;
           color: $dark-blue;
           cursor: pointer;
-          @include breakpoint(mobileonly) {
-            margin-bottom: 15px;
+          @include breakpoint("phone-tablet") {
+            margin-bottom: 10px;
+            margin-right: 15px;
           }
         }
       }
