--- a/src/shared/formStyles.module.scss
+++ b/src/shared/formStyles.module.scss
@@ -52,21 +52,29 @@
         }
     }
     .facebookLink {
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        // display: flex;
+        // justify-content: center;
+        // align-items: center;
+        border: none;
         color: #385185;
-        margin-bottom: 20px;
+        background-color: white;
+        margin-bottom: 7px;
         font-size: $normal-font-size;
         font-weight: 600;
-        svg {
+        cursor: pointer;
+        i {
             margin-right: 5px;
+        }
+        &:focus,
+        &:active {
+            outline: none;
         }
     }
     .forgotLink {
         font-size: $normal-font-size;
         font-weight: 600;
         color: #3897f0;
+        cursor: pointer;
     }
     .button {
         @include blueButton();
