--- a/src/components/App/styles.module.scss
+++ b/src/components/App/styles.module.scss
@@ -1,6 +1,22 @@
 @import "reset-css";
 @import url("https://fonts.googleapis.com/css?family=Roboto:300:400,500");
 body {
-    background-color: $bg-color;
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
+  background-color: $bg-color;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+img {
+  max-width: 100%;
+}
+
+a:link,
+a:visited,
+a:hover {
+  text-decoration: none;
+  color: #000000;
 }
