--- a/src/components/Feed/styles.module.scss
+++ b/src/components/Feed/styles.module.scss
@@ -1,9 +1,16 @@
 .feed {
-    min-height: 500px;
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    max-width: $max-page-width;
-    margin: 0 auto;
-    align-items: center;
+  min-height: 500px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: $max-page-width;
+  margin: 0 auto;
+  align-items: center;
+  margin-top: 60px;
+  @include breakpoint("phone") {
+    margin-top: 0;
+  }
+  @include breakpoint("tablet") {
+    margin-top: 0;
+  }
 }
