--- a/src/components/UserList/styles.module.scss
+++ b/src/components/UserList/styles.module.scss
@@ -48,26 +48,45 @@
           align-items: center;
           margin: 15px 15px;
           position: relative;
+          .usernameBox {
+            font-size: $normal-font-size;
+            font-weight: 600;
+            display: flex;
+            flex-direction: column;
+            .username {
+              margin-bottom: 5px;
+            }
+            .name {
+              color: $dark-gray;
+              font-weight: 500;
+            }
+          }
           img {
-            width: 50px;
-            height: 50px;
+            width: 35px;
+            height: 35px;
             border: 1px solid whitesmoke;
             border-radius: 50%;
             margin-right: 10px;
           }
-          .follow {
+          .followButton {
             position: absolute;
             right: 15px;
-            padding: 7px 5px;
+            padding: 9px 10px;
             background-color: $light-blue;
             border-radius: 3px;
             color: white;
             font-size: $normal-font-size;
+            font-weight: 600;
             cursor: pointer;
             user-select: none;
             &:active {
               opacity: .6;
             }
+          }
+          .unFollowed {
+            background-color: white;
+            color: black;
+            border: 1px solid $border-color;
           }
         }
       }
