--- a/src/config/_colors.scss
+++ b/src/config/_colors.scss
@@ -3,4 +3,4 @@ $dark-blue: #003569;
 $light-blue: #3897f0;
 $dark-gray: #999;
 $border-color: #e6e6e6;
-$light-grey: #efefef;
+$light-gray: #efefef;
