--- a/src/components/UserList/styles.module.scss
+++ b/src/components/UserList/styles.module.scss
@@ -18,7 +18,7 @@
         padding: 14px 0;
         justify-content: center;
         align-items: center;
-        border-bottom: 2px solid $light-grey;
+        border-bottom: 2px solid $light-gray;
         height: 45px;
         position: relative;
         .title {
@@ -68,7 +68,7 @@
             border-radius: 50%;
             margin-right: 10px;
           }
-          .followButton {
+          .button {
             position: absolute;
             right: 15px;
             padding: 9px 10px;
